@@ -66,8 +66,6 @@ typedef bool _Bool;
 #define ATTR_UNUSED(x)  x
 #endif /* !LDNS_BUILD_CONFIG_HAVE_ATTR_UNUSED */
 
-#define LDNS_TRUST_ANCHOR_FILE "@LDNS_TRUST_ANCHOR_FILE@"
-
 #if !LDNS_BUILD_CONFIG_HAVE_SOCKLEN_T
 typedef int socklen_t;
 #endif
